@@ -69,6 +69,17 @@ enum
     MENU_SELECT_SLOT_1P = 10,
     // Select game slot for two player game
     MENU_SELECT_SLOT_2P = 20,
+
+    MENU_SELECT_SLOT_1P_COPY_S1 = 11,
+    MENU_SELECT_SLOT_2P_COPY_S1 = 21,
+    MENU_SELECT_SLOT_COPY_S1_ADD = 1,
+    MENU_SELECT_SLOT_1P_COPY_S2 = 12,
+    MENU_SELECT_SLOT_2P_COPY_S2 = 22,
+    MENU_SELECT_SLOT_COPY_S2_ADD = 2,
+
+    MENU_SELECT_SLOT_1P_DELETE = 13,
+    MENU_SELECT_SLOT_2P_DELETE = 23,
+    MENU_SELECT_SLOT_DELETE_ADD = 3,
 };
 
 struct MainMenuContent
