@@ -36,6 +36,7 @@ Changes for 1.3.5
 -Fixed the vanilla bug: inability to set the autoscrolling for any non-zero section
 -Added the support for the simple-style per-section autoscrolling setup from the SMBX-38A specification
 -Fixed the vanilla crash when NPC being located far off the screen, tries to find blocks
+-Added an ability to copy and delete game saves from the game menu
 
 Changes for 1.3.4
 -Fixed the inability to use any custom sounds and custom music at level's custom data directory
